# dummy_payment_processor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b11b1207912d_init.py
app/: app.py  consumer.py  outbox_worker.py
app/config/: db.py  logging.py  rabbitmq.py  settings.py
app/events/: event_type.py  payment_events.py
app/exceptions/: global_handler.py  http_exceptions.py  payment.py  payment_exceptions.py
app/middlewares/: security.py
app/models/: outbox_event.py  payment.py
app/models/util/: currency.py  outbox_status.py  payment_enums.py  payment_status.py
app/outbox_worker/: outbox_worker.py
app/routers/: payment_router.py
app/schemas/: payment_dtos.py
app/services/: payment_service.py
docker/rabbitmq/: Dockerfile
