[project]
name = "payment-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "faststream>=0.6.7",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]
